--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
     <div class="header">
         <div class="logo">
             <a href="index.html">
-                <img src="images/tsa_logo.png" alt="Company Logo" height="50">
+                <img src="images/Transfreight-white.png" alt="Company Logo" height="50">
             </a>
         </div>
         <div class="menu">
@@ -47,8 +47,7 @@
                     <a href="software.html">Transport Management Software</a>
                 </div>
             </div>
-            <a href="#">News</a>
-            <a href="#contact">Book an Appointment</a>
+            <a href="news.html">News</a>
         </div>
         <a href="tel:1300964431" class="phone-number"><img src="images/icons8-phone-96.png" alt="phone" height="30">
             1300
