--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfwJL4pAAAAAOe9uiba442vYFmnxvO-kp_RU1Sw">
-    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -39,7 +37,7 @@
     <div class="header">
         <div class="logo">
             <a href="index.html">
-                <img src="images/tsa_logo.png" alt="Company Logo" height="50">
+                <img src="images/Transfreight-white.png" alt="Company Logo" height="50">
             </a>
         </div>
         <div class="menu">
@@ -54,7 +52,7 @@
                     <a href="software.html">Transport Management Software</a>
                 </div>
             </div>
-            <a href="#">News</a>
+            <a href="news.html">News</a>
             <a href="#contact">Book an Appointment</a>
         </div>
         <a href="tel:1300964431" class="phone-number"><img src="images/icons8-phone-96.png" alt="phone" height="30">
@@ -88,7 +86,7 @@
                 <input id="modal-toggle" type="checkbox">
                 <label class="modal-btn" for="modal-toggle">Contact Us</label>
                 <label class="modal-backdrop" for="modal-toggle"></label>
-                <form class="modal-content">
+                <form class="modal-content" action="https://formspree.io/f/mqkrwwob" method="POST">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="tel" name="phone" placeholder="Your Phone" required>
                     <input type="email" name="email" placeholder="Your Email" required>
@@ -101,24 +99,29 @@
     </div>
 
     <!-- About-->
-    <div id="about">
-        <div class="col">
-            <img src="images/pale-handshake-for-sealing-a-financial-deal.png" alt="ticket response time" height="300">
-        </div>
-        <div class="col">
-            <h3>ONE CONTACT.<br>ONE PLATFORM.<br>ONE INVOICE.</h3>
-        </div>
-        <div class="col">
-            <p>
-                Empower your business with Transfreight Solutions.<br>
-                <br>
-                At Transfreight Solutions, we deliver personalized freight solutions designed to meet your
-                specific
-                business needs. With our vast network of third-party suppliers nationally, we excel in customer
-                service, supply chain proficiency, integration, and tailored solutions. Trust our team of
-                experts to
-                handle your freight needs, enabling you to focus on your core business endeavors.
-            </p>
+    <div class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col ">
+                    <img src="images/pale-handshake-for-sealing-a-financial-deal.png" alt="ticket response time"
+                        height="300">
+                </div>
+                <div class="col">
+                    <h3>ONE CONTACT.<br>ONE PLATFORM.<br>ONE INVOICE.</h3>
+                </div>
+                <div class="col">
+                    <p>
+                        Empower your business with Transfreight Solutions.<br>
+                        <br>
+                        At Transfreight Solutions, we deliver personalized freight solutions designed to meet your
+                        specific
+                        business needs. With our vast network of third-party suppliers nationally, we excel in customer
+                        service, supply chain proficiency, integration, and tailored solutions. Trust our team of
+                        experts to
+                        handle your freight needs, enabling you to focus on your core business endeavors.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <!-- End #about -->
@@ -152,7 +155,7 @@
     <!-- Experience-->
     <div class="experience">
         <a href="services.html">
-            <img src="images/tsa_offer_rm.png" alt="what we offer" height="1000">
+            <img src="images\TSA Offer (1).png" alt="what we offer" height="1000">
         </a>
     </div>
     <!-- End #experience -->
@@ -215,12 +218,13 @@
     <div id="contact">
         <h3>Book An Appointment</h3>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/f/xoqzvqok" action="http://httpbin.org/post">
+            <form method="POST" action="https://formspree.io/f/mqkrwwob">
                 <input type="hidden" name="_subject" value="Contact request from transfreight.com.au" />
                 <div class="name-fields">
                     <select name="appointment_type" id="appointment_type" required>
-                        <option value="">Select Appointment Type (required)</option>
-                        <option value="phone_consultation">15 minutes phone consultation</option>
+                        <option value="">Call Back Type</option>
+                        <option value="phone_consultation">Email</option>
+                        <option value="phone_consultation">15 minutes Phone consult</option>
                         <option value="face_to_face">Face to face appointment (Video Call)</option>
                     </select>
                     <input type="date" name="appointment_date" id="appointment_date" required>
@@ -234,7 +238,7 @@
                 <input type="email" name="_replyto" placeholder="Your Email (required)" required>
                 <input type="text" name="location" placeholder="Location (required)" required>
                 <textarea name="message" placeholder="Your Enquiry" required></textarea>
-                <div class="g-recaptcha" data-sitekey="6LfwJL4pAAAAAOe9uiba442vYFmnxvO-kp_RU1Sw"></div>
+                <!-- <div class="g-recaptcha" data-sitekey="6LfwJL4pAAAAAOe9uiba442vYFmnxvO-kp_RU1Sw"></div> -->
                 <div class="submit-button">
                     <button class="btn" type="submit"><span>Submit</span><img
                             src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="30" width="30"></button>
@@ -253,7 +257,6 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <!-- Add more navigation links as needed -->
                     </ul>
                 </div>
                 <div class="col">
@@ -261,7 +264,6 @@
                         <li><a href="faq.html">FAQ</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                         <li><a href="#">Terms and Conditions</a></li>
-                        <!-- Add more resource links as needed -->
                     </ul>
                 </div>
                 <div class="col">
@@ -269,7 +271,6 @@
                         <li><a href="#">LinkedIn</a></li>
                         <li><a href="email:sales@transfreight.com.au">sales@transfreight.com.au</a></li>
                         <li><a href="tel:1300964431">1300 964 431</a></li>
-                        <!-- Add more social media links as needed -->
                     </ul>
                 </div>
             </div>
@@ -291,18 +292,6 @@
     <script src="js/rotating-text.js"></script>
     <script src="js/lead.js"></script>
     <script src="js/quick-contact.js"></script>
-    <script>
-        function onClick(e) {
-            e.preventDefault();
-            grecaptcha.enterprise.ready(async () => {
-                const token = await grecaptcha.enterprise.execute('6LfwJL4pAAAAAOe9uiba442vYFmnxvO-kp_RU1Sw', { action: 'LOGIN' });
-            });
-        }
-        function onSubmit(token) {
-            document.getElementById("contact-form").submit(); // Submit the form when reCAPTCHA is verified
-        }
-    </script>
-
 </body>
 
 </html>
